# IDE_Scanner_cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: product-design.md
scripts/: sync_vendored_engine.py
src/guardrails_cli/: __init__.py  engine_source.json  help_manual.py  main.py  presentation.py  report_reader.py  scan_service.py  scanner_adapter.py  snapshot.py  tui.py
src/guardrails_cli/exporters/: __init__.py  _atomic.py  html.py  json_export.py  markdown.py
src/guardrails_cli/ui/: __init__.py  panels.py  prompts.py  renderers.py  tables.py  theme.py
src/ide_scanner/: __init__.py  agent.py  ast_analyzer.py  classification_policy.py  cli.py  core.py  discovery.py  jsonc.py  models.py  posture.py  public_outcomes.py  registry.py  report_bundle.py  rule_registry.py  rules.py  sandbox_runner.py  scanner.py  service.py  web_bridge.py
src/ide_scanner/benchmarks/: __init__.py  runner.py
src/ide_scanner/benchmarks/adapters/: __init__.py  protect_your_secrets.py
src/ide_scanner/intelligence/: extension-advisories.json
src/ide_scanner/js_ast/: walker.js
src/ide_scanner/providers/: __init__.py  static_analysis.py
tests/: test_cli_ui.py  test_engine_parity.py  test_guardrails_cli.py  test_guardrails_reports.py  test_guardrails_snapshot.py  test_tui.py
