[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardlens"
version = "0.3.1"
description = "Guardrails local IDE extension scanner."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "preethamak" }]
dependencies = [
  "guardlens-core==0.1.0",
  "textual>=8.2.8,<9",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

[project.optional-dependencies]
analysis = ["semgrep>=1.100,<2", "yara-python>=4.5,<5"]
dev = ["build>=1.2", "twine>=6"]

[project.scripts]
guardrails = "guardrails_cli.main:main"

[project.urls]
Homepage = "https://github.com/preethamak/IDE_Scanner_cli"
Repository = "https://github.com/preethamak/IDE_Scanner_cli"
Issues = "https://github.com/preethamak/IDE_Scanner_cli/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["guardrails_cli*"]

[tool.setuptools.package-data]
guardrails_cli = ["assets/*.png"]

[tool.pytest.ini_options]
pythonpath = ["src"]
