[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardlens"
version = "0.3.3"
description = "Guardrails CLI for scanning locally installed extensions."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [{ name = "Preetham AK" }]
maintainers = [{ name = "Preetham AK" }]
dependencies = [
  "textual>=8.2.8,<9",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

[project.optional-dependencies]
analysis = ["semgrep>=1.100,<2", "yara-python>=4.5,<5"]
dev = ["build>=1.2", "twine>=6"]

[project.scripts]
guardrails = "guardrails_cli.main:main"

[project.urls]
Website = "https://ide-scanner.vercel.app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["guardrails_cli*", "ide_scanner*"]

[tool.setuptools.package-data]
guardrails_cli = ["assets/*.png"]
ide_scanner = ["js_ast/*.js", "js_ast/*LICENSE*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
